ci: with shuttle url

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         # runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: [ubuntu-latest, windows-latest]
+        runs-on: [ubuntu-latest]
         # cli: [sfdx, sf]
         cli: [sfdx]
         # method: [tarball, npm, installer]
