ci: READS fails to slack

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -64,6 +64,7 @@ jobs:
           echo "status is $status"
         shell: pwsh
         continue-on-error: true
+
   report:
     needs: [install]
     uses: ./.github/workflows/report.yml
@@ -71,3 +72,18 @@ jobs:
       metricName: ${{ needs.install.outputs.metricName }}
       metricValue: ${{ needs.install.outputs.metricValue }}
     secrets: inherit
+
+  slack:
+    needs: [install]
+    if: ${{ needs.install.outputs.metricValue != 1 }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: slackapi/slack-github-action@v1.21.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.CLI_ALERTS_SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+        with:
+          payload: |
+            {
+              "text": "A READS monitoring job failed: metricName: ${{ needs.install.outputs.metricName }}
+            }
