--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -7,9 +7,12 @@ jobs:
   check:
     strategy:
       matrix:
-        runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        cli: [sfdx, sf]
-        method: [tarball, npm, installer]
+        # runs-on: [ubuntu-latest, windows-latest, macos-latest]
+        runs-on: [ubuntu-latest]
+        # cli: [sfdx, sf]
+        cli: [sfdx]
+        # method: [tarball, npm, installer]
+        method: [tarball]
         channel: [stable, stable-rc]
         exclude:
           - runs-on: ubuntu-latest
