--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -17,4 +17,7 @@ jobs:
       - run: |
           git clone https://github.com/heroku/heroku-buildpack-l2met-shuttle.git
           heroku-buildpack-l2met-shuttle/bin/compile .
-          heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "${{ inputs.metricName }}=${{ inputs.metricValue }}"
+      - run: heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "${{ inputs.metricName }}=0"
+        if: inputs.metricValue == "Failed"
+      - run: heroku-buildpack-l2met-shuttle/support/start-l2met-shuttle echo "${{ inputs.metricName }}=1"
+        if: inputs.metricValue == "Passed"
