ci: back to all tests

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -7,12 +7,9 @@ jobs:
   check:
     strategy:
       matrix:
-        # runs-on: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: [ubuntu-latest]
-        # cli: [sfdx, sf]
-        cli: [sfdx]
-        # method: [tarball, npm, installer]
-        method: [tarball]
+        runs-on: [ubuntu-latest, windows-latest, macos-latest]
+        cli: [sfdx, sf]
+        method: [tarball, npm, installer]
         channel: [stable, stable-rc]
         exclude:
           - runs-on: ubuntu-latest
