--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -21,3 +21,18 @@ jobs:
       channel: ${{ matrix.channel }}
       runs-on: ${{ matrix.runs-on }}
     secrets: inherit
+
+  slack:
+    needs: [check]
+    if: ${{ needs.check.result == 'failure' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: slackapi/slack-github-action@v1.21.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.CLI_ALERTS_SLACK_WEBHOOK }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+        with:
+          payload: |
+            {
+              "text": "A READS monitoring job failed.  See https://github.com/salesforcecli/status/actions for more information"
+            }
