--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -4,7 +4,8 @@ on:
       - sm/gha
   workflow_dispatch:
   schedule:
-    - cron: */50 * * * * # every 50 minutes
+    # every hour
+    - cron: 50 * * * * 
 jobs:
   check:
     strategy:
